compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__recursion__tco_case_block.snap
---
source: compiler-core/src/javascript/tests/recursion.rs
assertion_line: 19
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> {\n      let y = x\n      main(y - 1)\n    }\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> {
      let y = x
      main(y - 1)
    }
  }
}


----- COMPILED JAVASCRIPT
export function main(loop$x) {
  while (true) {
    let x = loop$x;
    if (x === 0) {
      return undefined;
    } else {
      let y = x;
      loop$x = y - 1;
    }
  }
}
